required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN branch-5-2)
--------------------------------

- Stop configure execution with an error if path to one of the -config 
  scripts is invalid (#2710)


Version 5.2.0 (2008-07-16):
---------------------------

- mapfile.c: Fixed a bug that prevented using named symbols via URL configuration. (#2700)

Version 5.2.0-rc1 (2008-07-09):
-------------------------------

- mapowscommon.c: fix support multiple namespaces (#2690)

- Fix OGC simple filters on SDE layers (#2685)

- wfs11 getcapabilities: correct memory corruption (#2686)

- Allow building against Curl 7.10.6 and older which lack CURLOPT_PROXYAUTH
  option required for *_proxy_auth_type metadata (#571)

- Avoid fatal error when creating new ShapeFileObj with MapScript (#2674)

- Fixed problem with WMS INIMAGE exceptions vs AGG output formats (#2438)

- mapshape.c: Fixed integer pointer math being applied to uchars (#2667)

- Fixed seg fault with saveImage() in PHP MapScript due to #2673 (#2677)

- Fixed configure error related to new fribidi2 pkg-config support (#2664)

- Fixed windows build problem (#2676)

- Fix raster query bounds problem (#2679)


Version 5.2.0-beta4 (2008-07-02):
---------------------------------

- Added support in configure script for pkg-config for fribidi2 (#2664)

- Added more debug/tuning output to mapserv and shp2img at debug level 2 (#2673)

- maptemplate.c: removed extra line feeds from mime header output. (#2672)

- mapresample.c: fix for bug 2540 when using raster resampling and AGG.

- mapsde.c: Check at compile time that we have SE_connection_test_server, 
  which appears to only be available for ArcSDE 9+ (#2665).
  